<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/AppBG"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/CalcScreenTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="55sp"
            android:autoSizeMinTextSize="15sp"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:gravity="bottom|end"
            android:padding="5dp"
            android:text="@string/txtDefaultValue"
            android:maxLines="1"
            android:textColor="#FFFFFF"
            android:textSize="55sp" />

        <TableLayout
            android:id="@+id/tableInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/AppBG"
            android:padding="5dp"
            android:scaleX="1"
            android:shrinkColumns="0,1,2,3"
            android:stretchColumns="0,1,2,3">

            <TableRow
                android:id="@+id/row1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/buttonClear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginLeft="10dp"
                    android:autoSizeMaxTextSize="30sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeTextType="uniform"
                    android:backgroundTint="@color/button_type_1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/txtClear"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:typeface="normal" />

                <Button
                    android:id="@+id/buttonRemoveDig"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginLeft="10dp"
                    android:autoSizeMaxTextSize="30sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeTextType="uniform"
                    android:backgroundTint="@color/button_type_1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/txtRemoveDigit"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:typeface="normal" />

                <Button
                    android:id="@+id/buttonNegPos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginLeft="10dp"
                    android:autoSizeMaxTextSize="30sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeTextType="uniform"
                    android:backgroundTint="@color/button_type_1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/txtNegPos"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:typeface="normal" />

                <Button
                    android:id="@+id/buttonDivide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:autoSizeMaxTextSize="30sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeTextType="uniform"
                    android:backgroundTint="@color/button_type_3"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/txtDivision"
                    android:textAlignment="center"
                    android:textColor="@color/button_type_3_txt"
                    android:textSize="30sp"
                    android:typeface="normal" />

            </TableRow>

            <TableRow
                android:id="@+id/row2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/buttonNum7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:autoSizeMaxTextSize="30sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeTextType="uniform"
                    android:backgroundTint="@color/button_type_2"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/txtNum7"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/buttonNum8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:autoSizeMaxTextSize="30sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeTextType="uniform"
                    android:backgroundTint="@color/button_type_2"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/txtNum8"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/buttonNum9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:autoSizeMaxTextSize="30sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeTextType="uniform"
                    android:backgroundTint="@color/button_type_2"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/txtNum9"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/buttonMultiply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:autoSizeMaxTextSize="30sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeTextType="uniform"
                    android:backgroundTint="@color/button_type_3"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/txtMultiplication"
                    android:textColor="@color/button_type_3_txt"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:id="@+id/row3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/buttonNum4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:autoSizeMaxTextSize="30sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeTextType="uniform"
                    android:backgroundTint="@color/button_type_2"
                    android:padding="10dp"
                    android:text="@string/txtNum4"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/buttonNum5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:autoSizeMaxTextSize="30sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeTextType="uniform"
                    android:backgroundTint="@color/button_type_2"
                    android:padding="10dp"
                    android:text="@string/txtNum5"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/buttonNum6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:autoSizeMaxTextSize="30sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeTextType="uniform"
                    android:backgroundTint="@color/button_type_2"
                    android:padding="10dp"
                    android:text="@string/txtNum6"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/buttonMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:autoSizeMaxTextSize="30sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeTextType="uniform"
                    android:backgroundTint="@color/button_type_3"
                    android:padding="10dp"
                    android:text="@string/txtSubtraction"
                    android:textColor="@color/button_type_3_txt"
                    android:textSize="30sp" />

            </TableRow>

            <TableRow
                android:id="@+id/row4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/buttonNum1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:autoSizeMaxTextSize="30sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeTextType="uniform"
                    android:backgroundTint="@color/button_type_2"
                    android:padding="10dp"
                    android:text="@string/txtNum1"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/buttonNum2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:autoSizeMaxTextSize="30sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeTextType="uniform"
                    android:backgroundTint="@color/button_type_2"
                    android:padding="10dp"
                    android:text="@string/txtNum2"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/buttonNum3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:autoSizeMaxTextSize="30sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeTextType="uniform"
                    android:backgroundTint="@color/button_type_2"
                    android:padding="10dp"
                    android:text="@string/txtNum3"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/buttonPlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:autoSizeMaxTextSize="30sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeTextType="uniform"
                    android:backgroundTint="@color/button_type_3"
                    android:padding="10dp"
                    android:text="@string/txtAddition"
                    android:textColor="@color/button_type_3_txt"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:id="@+id/row5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/buttonNum0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_span="2"
                    android:autoSizeMaxTextSize="30sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeTextType="uniform"
                    android:backgroundTint="@color/button_type_2"
                    android:padding="10dp"
                    android:text="@string/txtNum0"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/buttonDecimal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:autoSizeMaxTextSize="30sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeTextType="uniform"
                    android:backgroundTint="@color/button_type_2"
                    android:padding="10dp"
                    android:text="@string/txtDecimal"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/buttonEquals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:autoSizeMaxTextSize="30sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeTextType="uniform"
                    android:backgroundTint="@color/button_type_3"
                    android:padding="10dp"
                    android:text="@string/txtCalculate"
                    android:textColor="@color/button_type_3_txt"
                    android:textSize="30sp" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>